--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   freezed_annotation: ^2.1.0
   json_annotation: ^4.6.0
   syncfusion_flutter_calendar: ^20.2.38
+  flutter_config: ^2.0.0
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
@@ -41,7 +43,9 @@ dev_dependencies:
   build_runner: ^2.2.0
   freezed: ^2.1.0+1
   json_serializable: ^6.3.1
-
+  flutter_dotenv: ^5.0.2
 
 flutter:
   uses-material-design: true
+  assets:
+    - .env
