--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   syncfusion_flutter_calendar: ^20.2.38
   flutter_config: ^2.0.0
   dio: ^4.0.6
+  get_it: ^7.2.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
